Fix favicon and overflow.

--- a/css/styles.css
+++ b/css/styles.css
@@ -18,6 +18,10 @@
   background: var(--color-primary);
   color: #fff;
 }
+html,
+body {
+  overflow-x: hidden;
+}
 html {
   font-size: 62.5%;
 }
